--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\andre\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\development\\flutter
+sdk.dir=/home/daniazs/Android/Sdk/
+flutter.sdk=/opt/flutter
