--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,17 +26,28 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace "com.example.print_bluetooth_thermal"
-
     compileSdkVersion 31
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 21
     }
+
     lintOptions {
         disable 'InvalidPackage'
+    }
+
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
